# translator

./: .gitignore  README.md  caption.html  index.html  onboarding.html  package.json  settings.html  subtitle.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts  voice-input.html
.claude/session-state/: latest.md
ai-service/: package.json
ai-service/src/: anthropic-client.ts  index.ts  types.ts
docs/: README.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
plans/260314-0032-migrate-react-shadcn/: phase-01-scaffold-react-vite.md  phase-02-tauri-hooks.md  phase-03-soniox-integration.md  phase-04-ui-components.md  phase-05-wire-app.md  phase-06-config-cleanup.md  phase-07-test-verify.md  plan.md
plans/260314-0206-ai-interview-assistant/: plan.md  ui-mockup.error.txt
scripts/: dev-setup.sh  install.sh  release.sh  sign-macos-app.sh
src/: App.tsx  caption-app.tsx  caption-entry.tsx  globals.css  main.tsx  onboarding-app.tsx  onboarding-entry.tsx  settings-app.tsx  settings-entry.tsx  subtitle-app.tsx  subtitle-entry.tsx  voice-input-app.tsx  voice-input-entry.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/audio/: microphone.rs  mod.rs  system_audio.rs
src-tauri/src/commands/: ai_chat.rs  audio.rs  global_shortcut.rs  llm_correction.rs  mod.rs  permissions.rs  settings.rs  text_inserter.rs  translate.rs
src/components/: history-view.tsx  (+8 more)
(+39 files in other folders)
